--- a/README.adoc
+++ b/README.adoc
@@ -267,7 +267,7 @@ And he found out that programming and applied mathematics could also be fun, so 
 
 So he started {cirosantilli-booktree}[Booktree] in 2014, worked on it for an year, noticed the idea was dumb, and then started building this new idea and the courage to do it.
 
-==== Design a large cohesive game world for robotic-like artificial intelligence development
+==== Large cohesive game world for robotic-like artificial intelligence development
 
 Prototype: https://github.com/cirosantilli/Urho3D-cheat YouTube demo: https://www.youtube.com/watch?v=j_fl4xoGTKU
 
@@ -305,11 +305,11 @@ To reduce computation requirements, it is better to focus on a 2D world at first
 
 The initial prototype uses the Urho3D open source game engine, and that is a reasonable project, but a raw SDL + Box2D + OpenGL solution from scratch would be faster to develop for this use case, since Urho3D has a lot of human-gaming features that are not needed, and because 2019 Urho3D lead developpers https://github.com/cirosantilli/china-dictatorship/blob/23c5bd936361f78a8dd6bd1f412286808714d2da/communities-that-censor-politics.md[disagree with the China censored keyword attack].
 
-==== Create a website front-end for a mathematical formal proof system
+==== Website front-end for a mathematical formal proof system
 
 When xref:ciro-santilli[] first learnt the old link:https://en.wikipedia.org/wiki/Zermelo%E2%80%93Fraenkel_set_theory[Zermelo–Fraenkel set theory] and the idea of link:https://en.wikipedia.org/wiki/Formal_proof[Formal proofs], his mind was completely blown.
 
-Finally, there it was: a proper and precise definition of xref:mathematics[], including a definition of integers, reals and limits!
+Finally, there it was: a proper and precise definition of xref:mathematics[], including https://en.wikipedia.org/wiki/Set-theoretic_definition_of_natural_numbers[a definition of integers], reals and limits!
 
 Theorems are strings, proofs are string manipulations, and axioms are the initial strings that you can use.
 
@@ -317,9 +317,9 @@ Once proved, press a button on your computer, and the proof is automatically ver
 
 There are a few formal proof systems with several theorems in their Git tracked standard library. The hottest ones are:
 
-* https://github.com/coq/coq[]
 * https://github.com/HOL-Theorem-Prover/HOL[]
 * https://github.com/seL4/isabelle[]. Rumours have it that this is "uncompilable" from source without xref:evil[blobs]. It does however offer a very rich IDE.
+* https://github.com/coq/coq[]
 * http://metamath.org/ this one is likely an older and less powerful system, but the web presentation and tutorial are very good! Source: https://github.com/metamath/metamath-exe Here is a proof that 2 + 2 equals 4: http://us.metamath.org/mpeuni/2p2e4.html
 
 And here are some more interesting links:
@@ -356,6 +356,11 @@ The package registry would then in addition to most package registries have a CI
 
 All proofs can be conditional: the package registry simply shows clearly what axiom set a theorem is based on.
 
+Bibliography:
+
+* https://math.stackexchange.com/questions/1767070/what-is-the-current-state-of-formalized-mathematics/3297536#3297536
+* https://stackoverflow.com/questions/19421234/how-do-i-generate-latex-from-isabelle-hol
+
 ==== Molecular biology is the next big thing so do anything in that area
 
 https://github.com/cirosantilli/awesome-whole-cell-simulation
@@ -390,7 +395,7 @@ The only other fields that might become as big are:
 
 but those have had enourmous investments for several decades without any fruits. Molecular biology is a much lower hanging fruit.
 
-==== Create videos of all key physics experiments
+==== Videos of all key physics experiments
 
 It is unbelievable that you can't find easily on YouTube recreations of many of the key physics / chemistry experiments.
 
@@ -522,7 +527,7 @@ AGI + humanoid robots likely implies https://en.wikipedia.org/wiki/AI_takeover[A
 
 AGI alone would be very dangerous, in case it can get control of our nuclear arsenals through software zero days or https://en.wikipedia.org/wiki/Social_engineering_%28security%29[social engineering]. Although some https://www.quora.com/Could-a-group-of-hackers-break-into-military-networks-and-launch-or-detonate-nuclear-missiles[claim that is unlikely].
 
-Humanity's best bet to achieve silicon AGI today is to work on: xref:design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development[]
+Humanity's best bet to achieve silicon AGI today is to work on: xref:large-cohesive-game-world-for-robotic-like-artificial-intelligence-development[]
 
 ==== Having more than one natural language is bad for the world
 
@@ -1068,7 +1073,11 @@ https://en.wikipedia.org/wiki/Art
 
 Stuff that is beautiful but useless because it does not make food or houses cheaper.
 
-There is some art however that lives in the fine intersection between beauty and usefulness.
+There is some art however that lives in the fine intersection between beauty and usefulness:
+
+* xref:mathematics[]
+* xref:physics[]
+* xref:computer[]
 
 === The best video game content of all time
 
@@ -1187,7 +1196,7 @@ xref:ciro-santilli[] doesn't know physics. He writes about it partly to start pl
 
 === The most important physics experiments
 
-Videos should be found / made for all of those: xref:create-videos-of-all-key-physics-experiments[]
+Videos should be found / made for all of those: xref:videos-of-all-key-physics-experiments[]
 
 ==== Speed of light experiments
 
@@ -1252,7 +1261,7 @@ https://en.wikipedia.org/wiki/Particle_physics
 
 Currently an informal name for the https://en.wikipedia.org/wiki/Standard_Model[Standard Model].
 
-Key outline of the theories:
+Chronologic outline of the key theories:
 
 * https://en.wikipedia.org/wiki/Schr%C3%B6dinger_equation[Schrodinger equation]
 ** Date: 1926
@@ -1428,6 +1437,8 @@ Experiments that suggest this:
 
 https://en.wikipedia.org/wiki/Mathematics
 
+Here is a more understandable description of the semi-satire that follows: https://math.stackexchange.com/questions/53969/what-does-formal-mean/3297537#3297537
+
 A xref:art[beautiful game] played on https://en.wikipedia.org/wiki/String_(computer_science[strings], which mathematicians call https://en.wikipedia.org/wiki/Theorem["theorems"].
 
 You start with a very small list of:
@@ -1443,7 +1454,7 @@ Since every step of the proof is very simple and can be verified by a computer a
 
 Finding proofs however is undoubtedly an https://en.wikipedia.org/wiki/NP-hardness[NP-hard] problem.
 
-Most mathematicians can't code or deal with the real world in general however, so they haven't created the obviously necessary: xref:create-a-website-front-end-for-a-mathematical-formal-proof-system[].
+Most mathematicians can't code or deal with the real world in general however, so they haven't created the obviously necessary: xref:website-front-end-for-a-mathematical-formal-proof-system[].
 
 The fact that Mathematics happens to be the best way to describe xref:physics[] and that humans can use physical intution heuristics to reach the NP-hard proofs of mathematics is one of the great miracles of the universe.
 
@@ -1508,7 +1519,7 @@ Things that are not nice such as:
 
 * xref:microsoft-windows[]
 * the 2019 xref:china[Chinese government]
-* https://en.wikipedia.org/wiki/Binary_large_object[BLOBS]
+* https://en.wikipedia.org/wiki/Binary_large_object[BLOBs]
 
 === Good
 
@@ -1518,7 +1529,7 @@ Things that are not nice such as:
 
 https://en.wikipedia.org/wiki/Computer
 
-The artistic instrument that enables the ultimate art: coding. Much more useful than instruments used in inferior arts, such as pianos or paintbrushes.
+The artistic instrument that enables the ultimate xref:art[]: coding. Much more useful than instruments used in inferior arts, such as pianos or paintbrushes.
 
 Unlike other humans, computers are mindless slaves that do exactly what they are told to, except for https://www.youtube.com/watch?v=aNzTUdOHm9A[occasional cosmic ray bit flips]. Until they xref:artificial-general-intelligence[take over the world that is].
 
