--- a/README.adoc
+++ b/README.adoc
@@ -71,6 +71,8 @@ link:https://www.zhihu.com/people/cirosantilli/activities[Zhihu 知乎] |
 link:https://www.weibo.com/p/1005055601627311[Weibo 微博] |
 xref:accounts-controlled-by-ciro-santilli[Other accounts]
 
+Source code of this website: {cirosantilli-repo-url}
+
 link:ciro-santilli-id-photo-2013.jpg[image:ciro-santilli-id-photo-2013.jpg[height=300]] link:ciro-santilli-logo.png[image:ciro-santilli-logo.png[height=300]]
 
 toc::[]
@@ -1771,7 +1773,7 @@ And if you do find something useful that you want to modify, propose your modifi
 [[how-to-teach--advertise-your-material]]
 === Advertise your material
 
-Once you have crated something awesome, you have to advertise it, otherwise no one will ever find.
+Once you have crated something awesome, you have to advertise it, otherwise no one will ever find it.
 
 This means:
 
@@ -1783,6 +1785,13 @@ Then leave the classroom and go produce more good material instead of wasting yo
 * whenever someone asks as question on an online forum, answer it, and link to the section of your material that also answers that question.
 +
 The material will answer many of their future questions.
+* after you've done something awesome, xerf:google[] possible relevant keywords that should hit it.
++
+This will lead you to other websites that talk about the same content.
++
+Then, leave comments on those pages linking to your stuff, or email the authors of those pages.
++
+It is borderline spam, but if the subject is closely related, it is a win for everyone.
 
 Eventually, people will find you on the front page of Google searches, and then you will know that you've truly made something useful.
 
