7dda517b924f5abf9b0c1a39b43b28771bb5e063

--- a/README.adoc
+++ b/README.adoc
@@ -2038,18 +2038,18 @@ Hopefully will be killed by https://en.wikipedia.org/wiki/WebAssembly[WebAssembl
 
 Cheatsheet on HTML, CSS and JavaScript.
 
-Old cheat at: link:web/[]
+Old cheat on separate repo: link:web/[]
 
 Now moving to either:
 
-* files under: link:web-cheat/[] for the boring stuff
+* separate files under: link:web-cheat/[] for the boring stuff
 * subsections under this section for the more exciting stuff!
 
 Index:
 
 * JavaScript
 ** link:web-cheat/js-image-load.html[]: load an image from JavaScript dynamically: https://stackoverflow.com/questions/226847/what-is-the-best-javascript-code-to-create-an-img-element
-** link:web-cheat/js-image-load.html[]: load an image from JavaScript dynamically when it would become visible on the viewport: https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport
+** link:web-cheat/js-image-load-viewport.html[]: load an image from JavaScript dynamically when it would become visible on the viewport: https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport
 
 ===== HTML canvas
 
