--- a/README.adoc
+++ b/README.adoc
@@ -603,6 +603,7 @@ xref:ciro-santilli[] controls the following accounts:
 * https://peerj.com/cirosantilli/
 * https://profiles.3dgames.com.ar/profiles/1002278
 * https://pypi.org/user/cirosantilli/
+* https://rubygems.org/profiles/cirosantilli
 * https://software.intel.com/en-us/user/1090688
 * https://soundcloud.com/cirosantilli
 * https://steamcommunity.com/id/cirosantilli/
@@ -811,7 +812,7 @@ Jekyll is only used now for backwards compatibility to not break some key conten
 
 GitHub pages is chosen instead of a GitHub README for the following reasons:
 
-* Ciro will want some unsupported extensions, notably mathematics, likely with Katex server side:
+* Ciro will want some unsupported extensions, notably mathematics, likely with <<mathematics-typesetting-setup-of-ciro-santillis-website,Katex server side>>:
 ** https://github.com/asciidoctor/asciidoctor/pull/3338
 ** https://stackoverflow.com/questions/11256433/how-to-show-math-equations-in-general-githubs-markdownnot-githubs-blog
 ** https://g14n.info/2014/09/math-on-github-pages/
@@ -901,6 +902,8 @@ Block: xref:math-test-math[]
 ++++
 \sqrt{2+2} = 2
 ++++
+
+TODO: move to https://github.com/cirosantilli/asciidoctor-katex-2 once major TODOs there are done.
 
 === Ciro Santilli's skills
 
